Z-index fix

--- a/src/webui/public/css/application.css
+++ b/src/webui/public/css/application.css
@@ -92,6 +92,7 @@ h2, .h2 {
 
 #navbar {
     border-bottom: 2px solid #6cadd3;
+    z-index: 9999999;
 }
 
 #navbar-container {
